# divemt

./: .gitignore  Makefile  README.md  pyproject.toml  setup.py
data/: warmup.tsv
data/questionnaire/: fields.json  post_task.tsv  pre_task.tsv
divemt/: __init__.py  cache_utils.py  cer.py  custom_simalign.py  parse_utils.py  qe_taggers.py  tag_utils.py  utils.py  wmt22qe_utils.py
divemt/qe_taggers/: __init__.py  base.py  custom_simalign.py  name_tbd_tagger.py  wmt22_tagger.py
notebooks/: analysis.ipynb  fine-grained-analysis.ipynb  modeling.Rmd  qe_visualize.ipynb
reports/: modeling.html
scripts/: preprocess.py  setup.sh
tests/: test_qe_taggers_name_tbd_tagger.py
