[build-system]
requires = ["setuptools>=60.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "divemt"
description = "Post-editing effectiveness for typologically-diverse languages"
readme = "README.md"
license = {text = "GPLv3"}
authors = [
  {name = "Gabriele Sarti", email = "g.sarti@rug.nl"},
]
version = "0.2.0"
requires-python = ">=3.8"
# TODO: setup versions, add [project.optional-dependencies] for tests
dependencies = [
    "numpy<1.19.5",  # as simalign is not compatible with numpy >=1.20.0 (np.int is deprecated), 1.19.5 vulnerable
    "pandas",
    "sacrebleu",
    "Levenshtein",
    "stanza",
    "simalign",
    "strenum",
    "sentencepiece",
    "tqdm",
    "black",
    "flake8",
    "isort",
    "pytest",
    "ruff",
]

[project.urls]
homepage = "https://github.com/gsarti/divemt"

# https://stackoverflow.com/questions/72294299/multiple-top-level-packages-discovered-in-a-flat-layout
[tool.setuptools]
py-modules = ["divemt"]


[tool.black]
# https://github.com/psf/black
target-version = ["py38"]
preview = true
line-length = 119
color = true

exclude = '''
/(
    \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
    | env
    | venv
)/
'''

[tool.ruff]
target-version = "py38"
exclude = [
    ".git",
    ".vscode",
    ".github",
    "__pycache__",
    "docs/source/conf.py",
    "old",
    "build",
    "htmlcov",
    "dev_examples",
    "dist",
    ".tox",
    "temp",
    "*.egg",
    "venv",
    ".venv",
]
fix = true
ignore = [
    "C901",
    "E731",
    "E741",
    "F821",
    "C901",
    "B006",
    "PLR2004",
    "PLR0913",
    "PLR0915",
]
line-length = 119
select = [
    "E", # pycodestyle errors
    "F", # pyflakes
    "W", # pycodestyle warnings
    "C", # flake8-comprehensions
    "B", # flake8-bugbear
    "Q", # flake8-quotes
    "I", # isort
    "UP", # flake8-pyupgrade
    "PLC", # flake8-pylint
    "PLE", # flake8-pylint
    "PLR", # flake8-pylint
    "PLW", # flake8-pylint
]
src = ["divemt", "scripts", "tests"]
